--- a/bundles/org.openhab.ui/web/package.json
+++ b/bundles/org.openhab.ui/web/package.json
@@ -44,7 +44,12 @@
     "test:unit": "npx jest",
     "test:unit:watch": "npx jest --watch",
     "test:e2e": "npx cypress run",
-    "test:e2e:gui": "npx cypress open"
+    "test:e2e:gui": "npx cypress open",
+    "lint": "eslint ./src",
+    "fix-changed": "npm-run-all lint:fix-changed prettier:fix-changed",
+    "prettier:fix-changed": "pretty-quick --write --changedSince=origin/master",
+    "lint:fix-changed": "npm run lint --fix --changedSince=origin/master",
+    "pretty-quick": "pretty-quick"
   },
   "browserslist": [
     "Android >= 5",
@@ -99,7 +104,9 @@
     "css-loader": "^2.1.1",
     "cypress": "^3.8.2",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^2.2.1",
+    "eslint-plugin-prettier-vue": "^2.1.1",
     "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -113,6 +120,8 @@
     "ora": "^3.4.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^3.0.0",
     "rimraf": "^2.7.1",
     "standard": "^12.0.1",
     "strip-ansi": "=3.0.1",
